compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_could_not_unify6.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 738
expression: "fn main() { let x: String = 5 x }"
---
----- SOURCE CODE
fn main() { let x: String = 5 x }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:29
  │
1 │ fn main() { let x: String = 5 x }
  │                             ^

Expected type:

    String

Found type:

    Int
